apps/production/authelia/authelia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
    - name: http
      port: 80
      targetPort: http
